CRUD e backend do Locutor